--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "fs-extra": "^11.3.0",
     "jsonwebtoken": "^9.0.2",
     "mercadopago": "^2.5.0",
-    "mongoose": "^8.14.0"
+    "mongoose": "^8.14.0",
+    "nodemailer": "^7.0.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
